added favicon to page

--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>friendship globe</title>
+    <link rel="icon" type="image/png" href="images/profile.png">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/markdown-it/12.0.6/markdown-it.min.js"></script>
     <style>
         html{background-color: gray;}
