added code of conduct

--- a/site/index.html
+++ b/site/index.html
@@ -18,6 +18,7 @@
 </head>
 
 <body>
+    <base target="_blank">
     <div id="md" class="center"></div>
     <script>
         var xhr = new XMLHttpRequest();
