--- a/site/index.html
+++ b/site/index.html
@@ -18,6 +18,17 @@
 </head>
 
 <body>
+    <!-- Navbar -->
+    <nav>
+        <img class="" width="50px" src="/profile.png"
+            alt="a red my little pony character with a black mane with a blue stripe">
+        <div style="float: right;">
+            <a href="/">home</a>
+            <a href="/projects">projects</a>
+
+        </div>
+
+    </nav>
     <base target="_blank">
     <div id="md" class="center"></div>
     <script>
