--- a/site/index.html
+++ b/site/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>friendship globe</title>
-    <link rel="icon" type="image/png" href="images/profile.png">
+    <link rel="icon" type="image/png" href="/assets/images/profile.png">
     <link rel="stylesheet" href="/style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/markdown-it/12.0.6/markdown-it.min.js"></script>
 </head>
@@ -12,7 +12,7 @@
 <body>
     <!-- Navbar -->
     <nav>
-        <img class="" width="50px" src="/profile.png"
+        <img class="" width="50px" src="/assets/images/profile.png"
             alt="a red my little pony character with a black mane with a blue stripe">
         <div style="float: right;">
             <a href="/">home</a>
