--- a/site/index.html
+++ b/site/index.html
@@ -7,6 +7,7 @@
     <link rel="icon" type="image/png" href="/assets/images/profile.png">
     <link rel="stylesheet" href="/style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/markdown-it/12.0.6/markdown-it.min.js"></script>
+
 </head>
 
 <body>
@@ -21,7 +22,7 @@
         </div>
 
     </nav>
-    <base target="_blank">
+    < base target="_blank">
     <div id="md" class="center"></div>
     <script>
         var xhr = new XMLHttpRequest();
@@ -34,6 +35,12 @@
             }
         };
         xhr.send();
+        const divElement = document.querySelector('#md');
+        const aElements = divElement.querySelectorAll('a');
+        aElements.forEach(a => {
+          a.setAttribute('target', '_blank');
+        });
+
     </script> 
 
 </body>
