--- a/site/index.html
+++ b/site/index.html
@@ -14,7 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>friendship globe</title>
     <link rel="icon" type="image/png" href="/assets/images/profile.png">
-    <link rel="stylesheet" href="/home/work/Documents/bronygamdev.github.io/assets/css/style.css">
+    <link rel="stylesheet" href="/assets/css/style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/markdown-it/12.0.6/markdown-it.min.js"></script>
     <base>
 </head>
@@ -60,7 +60,7 @@
         xhr.send();
 
     </script>
-    <script src="/home/work/Documents/bronygamdev.github.io/assets/js/collapsible.js"></script>
+    <script src="/assets/js/collapsible.js"></script>
 </body>
 
 </html>
